index.css
:root {
    --bg-color: #f5fbff;
    --fg-color: #1f1f1f;
}

body {
    background-color: var(--bg-color);
    font-family: 'Noto Sans JP', sans-serif;
    padding: 0;
    margin: 0;
}

h1, h2 {
    margin: 0;
}

main {
    padding: 1.5rem;
    width: 100%;
    max-width: 500px;
}

main > section {
    margin: 2rem 0;
}

input, textarea {
    padding: 0.8rem;
    outline: none;
    font-family: 'Noto Sans JP', sans-serif;
    width: 100%
}

#anki_csv {
    color: var(--fg-color);
    resize: vertical;
    height: 7rem;
}

#anki_csv, #input {
    margin-top: 1.1rem;
}

